--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,6 @@ release/
 packer/cloud-*/
 packer/vagrant-*/
 mklive-build*/
-hrmpf-include/
+#hrmpf-include/
 installed.pkgs
 installed.alternatives
