--- a/.github/workflows/hrmpf.yml
+++ b/.github/workflows/hrmpf.yml
@@ -186,9 +186,21 @@ jobs:
           for f in ./*.iso; do
             ../mktorrent.sh "$f"
           done
-          for f in ./*.iso_part_*; do
-            ../mktorrent.sh "$f"
-          done
+          if [ -f *.iso_part_aa ]; then
+            for f in ./*.iso_part_aa; do
+              ../mktorrent.sh "$f"
+            done
+          fi
+          if [ -f *.iso_part_ab ]; then
+            for f in ./*.iso_part_ab; do
+              ../mktorrent.sh "$f"
+            done
+          fi
+          if [ -f *.iso_part_ac ]; then
+            for f in ./*.iso_part_ac; do
+              ../mktorrent.sh "$f"
+            done
+          fi
 
       - name: Upload artifacts
         id: upload
