--- a/.github/workflows/hrmpf.yml
+++ b/.github/workflows/hrmpf.yml
@@ -223,6 +223,7 @@ jobs:
           name: hrmpf ${{ needs.prepare.outputs.version }}
           body_path: release-body.txt
           preserve_order: true
+          fail_on_unmatched_files: false
           files: |
             distdir/*.iso
             distdir/*.torrent
