--- a/.github/workflows/hrmpf.yml
+++ b/.github/workflows/hrmpf.yml
@@ -227,4 +227,6 @@ jobs:
           files: |
             distdir/*.iso
             distdir/*.torrent
-            distdir/*.iso_part_??
+            distdir/*.iso_part_aa
+            distdir/*.iso_part_ab
+            
